fix: document dark mode variable box shadow

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -14,6 +14,7 @@
   --background-color: #f6f6f6;
   --foreground-color: #e8e8e8;
   --modal-overlay-color: rgba(173, 173, 173, 0.5);
+  --document-box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   --shadow-color: #0a0a0a;
   --primary-text-color: #0a0a0a;
   --secondary-text-color: #ffffff;
@@ -28,6 +29,7 @@
   --background-color: #0a0a0a;
   --foreground-color: #1c1c1c;
   --modal-overlay-color: rgba(14, 14, 14, 0.5);
+  --document-box-shadow: 0 2px 4px rgba(255, 255, 255, 0.1);
   --shadow-color: #f6f6f6;
   --primary-text-color: #f6f6f6;
   --secondary-text-color: #0a0a0a;
@@ -165,12 +167,13 @@ button:focus-visible {
   width: 755px;
   padding-bottom: var(--document-height);
   background-color: var(--background-color);
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  box-shadow: var(--document-box-shadow);
   padding: 20px;
   cursor: text;
 
   .tiptap.ProseMirror {
     padding-bottom: var(--document-height);
+    outline: none;
   }
 }
 
@@ -471,6 +474,10 @@ button:focus-visible {
 
 .zen .document {
   margin-top: 30px;
+}
+
+.zen .container {
+  background-color: var(--background-color) !important;
 }
 
 @media print {
